--- a/MyTaskGuru/src/main/resources/application.properties
+++ b/MyTaskGuru/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/task?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=prateek
 spring.datasource.password=prateek@123
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
