--- a/mytaskguru/package.json
+++ b/mytaskguru/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3002/",
+  "proxy": "http://springboot-restful-webservices:3002/",
   "browserslist": {
     "production": [
       ">0.2%",
